sum is active for balance

--- a/view/addExpense.html
+++ b/view/addExpense.html
@@ -31,7 +31,7 @@
                                                   <label for="amount">Amount</label>
                                         </div>
                                         <div class="col-75">
-                                                  <input type="number" id="amount" name="amount" placeholder="its amount .." min="0" >
+                                                  <input type="number" id="amount" name="amount" placeholder="its amount .." min="0" value="0" >
                                         </div>
                               </div>
                               <div class="row">
