--- a/view/transaction.html
+++ b/view/transaction.html
@@ -11,7 +11,7 @@
                         margin-left: 15%;
                     }
                     th, td ,tr {
-                      
+                        border: 1px solid black;
                         padding: 8px;
                         margin-left: 15%;
                     }
