--- a/view/wizard.html
+++ b/view/wizard.html
@@ -15,7 +15,7 @@
                     
                     <!-- One "tab" for each step in the form: -->
                     <div class="tab">Balance:
-                      <p><input type="number" id="balance"  placeholder="Enter your  account balance please..." oninput="this.className = ''"></p>
+                      <p><input type="number" id="balance" value="0" min="0" placeholder="Enter your  account balance please..." oninput="this.className = ''"></p>
                       
                     </div>
                     
