--- a/view/transaction.html
+++ b/view/transaction.html
@@ -38,22 +38,26 @@
                     <thead>
                               
                         <tr>
-                            <th>Amount <input type="number" id="amountFilter" placeholder="Filter by Amount" oninput="filterTable('amount', this.value)"></th>
-                            <th>Date <input type="date" id="dateFilter" placeholder="Filter by Date" oninput="filterTable('date', this.value)"></th>
-                            <th>Repeat 
-                              <select id="repeatFilter" oninput="filterTable('repeat', this.value)">
-                              <option value="never">Never</option>
-                              <option value="everyWeek">Every week</option>
-                              <option value="everyMonth">Every month</option>
-                              </select>
+                            <th >Amount <input type="number" id="amountFilter" placeholder="Filter by Amount" oninput="filterTable('amount', this.value)"></th>
+                            <th >Date <input type="date" id="dateFilter" placeholder="Filter by Date" oninput="filterTable('date', this.value)"></th>
+                            <th >Repeat 
+                              <input type="text" id="repeatFilter" placeholder="Filter by Repeat" oninput="filterTable('repeat', this.value)">
+                              <!-- <select id="repeatFilter"  name="repeat" oninput="filterTable('repeat', this.value)">
+                                        <option value="never">Never</option>
+                                        <option value="everyWeek">Every week</option>
+                                        <option value="everyMonth">Every month</option>
+                              </select> -->
                             </th>
-                            <th>Category 
-                              <select id="categoryFilter" oninput="filterTable('category', this.value)">
-                              <option value="groceries">Groceries</option>
-                              <option value="car">Car</option>
-                              <option value="house">House</option>
-                              <option value="entertainement">Entertainement</option>
-                              </select>
+                            <th >Category 
+                              <input type="text" id="categoryFilter" placeholder="Filter by Category" oninput="filterTable('category', this.value)">
+                              <!-- <select  id="categoryFilter" type="text" oninput="filterTable('category', this.value)">
+                                        <option value="">All Categories</option>
+                                        <option value="groceries">Groceries</option>
+                                        <option value="car">Car</option>
+                                        <option value="house">House</option>
+                                        <option value="entertainment">Entertainment</option>
+                              </select> -->
+                                      
                             </th>
                             <th>Comment</th>
                         </tr>
