select tag as filter in tabel is active except date

--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -42,6 +42,15 @@
               </thead>
               <tbody></tbody>
           </table>
+
+          <div style="margin-left: 15%;">
+                    <button onclick="filterTable(2, 'today')">Today</button>
+                    <button onclick="filterTable(2, 'lastWeek')">Last Week</button>
+                    <button onclick="filterTable(2, 'lastMonth')">Last Month</button>
+                    <button onclick="filterTable(2, 'lastYear')">Last Year</button>
+                    
+          </div>
+
           <script src="../controllers/wizardScript.js"></script>
           <script src="../controllers/dashboard.js"></script>
 
