--- a/view/transaction.html
+++ b/view/transaction.html
@@ -39,24 +39,32 @@
                               
                         <tr>
                             <th >Amount <input type="number" id="amountFilter" placeholder="Filter by Amount" oninput="filterTable('amount', this.value)"></th>
-                            <th >Date <input type="date" id="dateFilter" placeholder="Filter by Date" oninput="filterTable('date', this.value)"></th>
+                            <th >Date 
+                              <input type="date" id="dateFilter" placeholder="Filter by Date" oninput="filterTable('date', this.value)">
+                              <!-- <select id="dateFilter" oninput="filterTable(this.value, this.value)">
+                                        <option value="">All Dates</option>
+                                        <option value="lastWeek">Last Week</option>
+                                        <option value="lastMonth">Last Month</option>
+                                        <option value="lastYear">Last Year</option>
+                              </select> -->
+                            </th>
                             <th >Repeat 
-                              <input type="text" id="repeatFilter" placeholder="Filter by Repeat" oninput="filterTable('repeat', this.value)">
-                              <!-- <select id="repeatFilter"  name="repeat" oninput="filterTable('repeat', this.value)">
+                              <!-- <input type="text" id="repeatFilter" placeholder="Filter by Repeat" oninput="filterTable('repeat', this.value)"> -->
+                              <select id="repeatFilter"  name="repeat" oninput="filterTable( this.value , this.value)">
                                         <option value="never">Never</option>
                                         <option value="everyWeek">Every week</option>
                                         <option value="everyMonth">Every month</option>
-                              </select> -->
+                              </select>
                             </th>
                             <th >Category 
-                              <input type="text" id="categoryFilter" placeholder="Filter by Category" oninput="filterTable('category', this.value)">
-                              <!-- <select  id="categoryFilter" type="text" oninput="filterTable('category', this.value)">
+                              <!-- <input type="text" id="categoryFilter" placeholder="Filter by Category" oninput="filterTable('category', this.value)"> -->
+                              <select  id="categoryFilter" type="text" oninput="filterTable(this.value, this.value)">
                                         <option value="">All Categories</option>
                                         <option value="groceries">Groceries</option>
                                         <option value="car">Car</option>
                                         <option value="house">House</option>
                                         <option value="entertainment">Entertainment</option>
-                              </select> -->
+                              </select>
                                       
                             </th>
                             <th>Comment</th>
@@ -66,74 +74,72 @@
           </table>
 
           <!-- Modal form for editing -->
-                    <div id="editModal" class="modal">
-                              <div class="modal-content">
-                              <span class="close">&times;</span>
-                              <form id="editForm">
-                              <div class="row">
-                                        <div class="col-25">
-                                        <label for="editAmount">Amount</label>
-                                        </div>
-                                        <div class="col-75">
-                                        <input type="number" id="editAmount" name="editAmount" placeholder="Enter the amount" min="0">
-                                        </div>
+          <div id="editModal" class="modal">
+                    <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <form id="editForm">
+                    <div class="row">
+                              <div class="col-25">
+                              <label for="editAmount">Amount</label>
                               </div>
-                              <div class="row">
-                                        <div class="col-25">
-                                        <label for="editDate">Date</label>
-                                        </div>
-                                        <div class="col-75">
-                                        <input type="date" id="editDate" name="editDate" placeholder="Enter the date">
-                                        </div>
-                              </div>
-                              <div class="row">
-                                        <div class="col-25">
-                                        <label for="editRepeat">Repeat</label>
-                                        </div>
-                                        <div class="col-75">
-                                        <select id="editRepeat" name="editRepeat">
-                                                  <option value="never">Never</option>
-                                                  <option value="everyWeek">Every week</option>
-                                                  <option value="everyMonth">Every month</option>
-                                        </select>
-                                        </div>
-                              </div>
-                              <div class="row">
-                                        <div class="col-25">
-                                        <label for="editCategory">Category</label>
-                                        </div>
-                                        <div class="col-75">
-                                        <select id="editCategory" name="editCategory">
-                                                  <option value="groceries">Groceries</option>
-                                                  <option value="car">Car</option>
-                                                  <option value="house">House</option>
-                                                  <option value="entertainment">Entertainment</option>
-                                        </select>
-                                        </div>
-                              </div>
-                              <div class="row">
-                                        <div class="col-25">
-                                        <label for="editComment">Comment</label>
-                                        </div>
-                                        <div class="col-75">
-                                        <textarea id="editComment" name="editComment" placeholder="Write something.." style="height:200px"></textarea>
-                                        </div>
-                              </div>
-                              <div class="row">
-                                        <input type="submit" value="Save">
-                              </div>
-                              </form>
+                              <div class="col-75">
+                              <input type="number" id="editAmount" name="editAmount" placeholder="Enter the amount" min="0">
                               </div>
                     </div>
-          <!-- <script src="../controllers/wizardScript.js"></script> -->
-          <!-- <script src="../controllers/dashboard.js"></script> -->
+                    <div class="row">
+                              <div class="col-25">
+                              <label for="editDate">Date</label>
+                              </div>
+                              <div class="col-75">
+                              <input type="date" id="editDate" name="editDate" placeholder="Enter the date">
+                              </div>
+                    </div>
+                    <div class="row">
+                              <div class="col-25">
+                              <label for="editRepeat">Repeat</label>
+                              </div>
+                              <div class="col-75">
+                              <select id="editRepeat" name="editRepeat">
+                                        <option value="never">Never</option>
+                                        <option value="everyWeek">Every week</option>
+                                        <option value="everyMonth">Every month</option>
+                              </select>
+                              </div>
+                    </div>
+                    <div class="row">
+                              <div class="col-25">
+                              <label for="editCategory">Category</label>
+                              </div>
+                              <div class="col-75">
+                              <select id="editCategory" name="editCategory">
+                                        <option value="groceries">Groceries</option>
+                                        <option value="car">Car</option>
+                                        <option value="house">House</option>
+                                        <option value="entertainment">Entertainment</option>
+                              </select>
+                              </div>
+                    </div>
+                    <div class="row">
+                              <div class="col-25">
+                              <label for="editComment">Comment</label>
+                              </div>
+                              <div class="col-75">
+                              <textarea id="editComment" name="editComment" placeholder="Write something.." style="height:200px"></textarea>
+                              </div>
+                    </div>
+                    <div class="row">
+                              <input type="submit" value="Save">
+                    </div>
+                    </form>
+                    </div>
+          </div>
+
+        
+
           
           <script src="../controllers/transaction.js" type="module"></script>
           <script src="../controllers/addExpense.js"></script>
           
-          <!-- <script src="../array.js"></script> -->
-
-
 </main>       
 
 
