--- a/view/transaction.html
+++ b/view/transaction.html
@@ -51,6 +51,7 @@
                             <th >Repeat 
                               <!-- <input type="text" id="repeatFilter" placeholder="Filter by Repeat" oninput="filterTable('repeat', this.value)"> -->
                               <select id="repeatFilter"  name="repeat" oninput="filterTable( this.value , this.value)">
+                                        <option value="">All Periods</option>
                                         <option value="never">Never</option>
                                         <option value="everyWeek">Every week</option>
                                         <option value="everyMonth">Every month</option>
