add all periods as js and in html code in dashboard

--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -106,7 +106,10 @@
                     </div>
                     
           </div>
-          <script src="../controllers/periods.js"></script>
+          <script src="../controllers/periodsLastYear.js"></script>
+          <script src="../controllers/periodsLastMonth.js"></script>
+          <script src="../controllers/periodsLastWeek.js"></script>
+          <script src="../controllers/periodsToday.js"></script>
           <script src="../controllers/wizardScript.js"></script>
           <script src="../controllers/dashboard.js"></script>
 
