--- a/view/transaction.html
+++ b/view/transaction.html
@@ -5,33 +5,30 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <link rel="stylesheet" href="../src/style.css">
           <title>Transactions</title>
-          <style>
-                    table {
-                        border-collapse: collapse;
-                        margin-left: 15%;
-                    }
-                    th, td ,tr {
-                        border: 1px solid black;
-                        padding: 8px;
-                        margin-left: 15%;
-                    }
-          </style>
+
 </head>
 <body>
+          <!-- Header -->
+          <div class="header1"> transactions </div><br>
 <main>
-          <div class="header1"> Dashboard</div>
+          
+          <!-- Title -->
+          <h1 style="margin-left: 15%;">Transaction</h1>
 
           <!-- Side navigation -->
           <div class="sidenav">
                     <a href="../view/dashboard.html">Dashboard</a>
                     <a href="../view/transaction.html">Transactions</a>
                     <a href="#">Add income</a>
-                    <a href="../view/addExpense.html">Add expense</a>
+                    <a href="/view/addExpense.html">Add expense</a>
                     <a href="#">Invoices</a>
                     <a href="#">My Wallet</a>
+                    <a href="../view/notification.html">Notification 
+                              <span class="badge" >3</span>
+                    </a>
           </div>
 
-          <h1 style="margin-left: 15%;">Transaction</h1>
+         
 
          
           <table id="data-table">
