--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -5,22 +5,14 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <link rel="stylesheet" href="../src/style.css">
           <title>Dashboard</title>
-          <style>
-                    table {
-                        border-collapse: collapse;
-                        margin-left: 15%;
-                    }
-                    th, td {
-                        border: 1px solid black;
-                        padding: 8px;
-                        margin-left: 15%;
-                    }
-          </style>
 </head>
 <body>
-<main>
-          <div class="header1"> Dashboard</div>
 
+          <!-- Header -->
+          <div class="header1"> Dashboard</div><br>
+<main>
+          <!-- Title -->
+          <h1 style="margin-left: 15%;">Dashboard</h1>
           <!-- Side navigation -->
           <div class="sidenav">
                     <a href="../view/dashboard.html">Dashboard</a>
@@ -29,6 +21,9 @@
                     <a href="/view/addExpense.html">Add expense</a>
                     <a href="#">Invoices</a>
                     <a href="#">My Wallet</a>
+                    <a href="../view/notification.html">Notification 
+                              <span class="badge" >3</span>
+                    </a>
           </div>
 
           <h1 style="margin-left: 15%;">Balance and Categories</h1>
