--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -17,8 +17,8 @@
           <div class="sidenav">
                     <a href="../view/dashboard.html">Dashboard</a>
                     <a href="../view/transaction.html">Transactions</a>
-                    <a href="#">Add income</a>
-                    <a href="/view/addExpense.html">Add expense</a>
+                    <a href="../view/addIncome.html">Add income</a>
+                    <a href="../view/addExpense.html">Add expense</a>
                     <a href="#">Invoices</a>
                     <a href="#">My Wallet</a>
                     <a href="../view/notification.html">Notification 
