--- a/view/wizard.html
+++ b/view/wizard.html
@@ -31,7 +31,7 @@
                               <span class="checkmark"></span>
                             </label>
                             
-                            <label class="container">child benefit
+                            <label class="container">Child benefit
                               <input type="checkbox">
                               <span class="checkmark"></span>
                             </label>
