--- a/view/addExpense.html
+++ b/view/addExpense.html
@@ -26,7 +26,7 @@
                               <a href="#">Invoices</a>
                               <a href="#">My Wallet</a>
                               <a href="../view/notification.html">Notification 
-                                        <span class="badge" >3</span>
+                                        <span id="numberOfNotification" class="badge" ></span>
                               </a>
                     </div>
 
