--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -22,7 +22,7 @@
                     <a href="#">Invoices</a>
                     <a href="#">My Wallet</a>
                     <a href="../view/notification.html">Notification 
-                              <span class="badge" >3</span>
+                              <span id="numberOfNotification" class="badge" ></span>
                     </a>
           </div>
 
