--- a/view/notification.html
+++ b/view/notification.html
@@ -35,7 +35,7 @@
                     <strong>Danger!</strong> <span id="dangerText"></span>
                     </div>
                     
-                    <div class="alert success">
+                    <!-- <div class="alert success">
                     <span class="closebtn">&times;</span>  
                     <strong>Success!</strong> Indicates a successful or positive action.
                     </div>
@@ -48,7 +48,7 @@
                     <div class="alert warning">
                     <span class="closebtn">&times;</span>  
                     <strong>Warning!</strong> Indicates a warning that might need attention.
-                    </div>
+                    </div> -->
           </div>
 
       </main>   
